--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,97 +1,149 @@
 ---
 title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+description: 'Get started with WaveAssist in minutes'
 ---
 
-## Setup your development
+## Getting Started with WaveAssist
 
-Learn how to update your docs locally and deploy them to the public.
+WaveAssist offers two powerful ways to work with your AI workflows: through our web dashboard and via local development using our Python SDK.
 
-### Edit and preview
+### Dashboard Development
 
 <AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
+  <Accordion icon="browser" title="Create Your First Project">
+    1. Sign up at [WaveAssist Dashboard](https://app.waveassist.io)
+    2. Click the "Add Project" card
+    3. Fill in your project details
+    4. Access your project key from the project settings
+
+    <Frame caption="Create new project">
+      <img
+        className="rounded-lg shadow-lg dark:shadow-neutral-900"
+        src="/images/create_project.png"
+        alt="WaveAssist Project Creation"
+      />
+    </Frame>
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 
-    1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `docs.json` is): ``` mintlify dev ```
-    <Note>
-      If you’re currently using the legacy ```mint.json``` configuration file, please update the Mintlify CLI:
 
+  <Accordion icon="code" title="Edit Node Code">
+    Each node in your workflow can be edited directly in the dashboard's code editor:
 
-      ```npm i -g mintlify@latest```
-      And run the new upgrade command in your docs repository:
+    <Frame caption="Dashboard Code Editor">
+      <img
+        className="rounded-lg shadow-lg dark:shadow-neutral-900 border border-neutral-200 dark:border-neutral-700"
+        src="/images/code_editor.png"
+        alt="WaveAssist Code Editor"
+      />
+    </Frame>
 
-      ```mintlify upgrade```
-      You should now be using the new ```docs.json``` configuration file. Feel free to delete the ```mint.json``` file from your repository.
-    </Note>
+    The editor provides:
+    - Syntax highlighting
+    - Code completion
+    - Real-time error checking
+    - Direct node execution
+  </Accordion>
+
+  <Accordion icon="gear" title="Node Configuration">
+    Configure node settings directly in the dashboard:
+    ```json
+    {
+      "name": "DataProcessor",
+      "type": "processing",
+      "schedule": "every 12 hours",
+      "inputs": ["raw_data"],
+      "outputs": ["processed_data"]
+    }
+    ```
   </Accordion>
 </AccordionGroup>
 
-### Deploy your changes
+### Local Development
 
 <AccordionGroup>
+  <Accordion icon="terminal" title="Install WaveAssist SDK">
+    Install our Python package to start developing locally:
+    ```bash
+    pip install waveassist
+    ```
+  </Accordion>
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
+  <Accordion icon="puzzle" title="Initialize WAHelper">
+    Connect to your project using the WAHelper:
+    ```python
+    from waveassist import WAHelper
 
+    # Initialize with your project key
+    helper = WAHelper('your-project-key')
+    ```
+  </Accordion>
+
+  <Accordion icon="code" title="Node Development">
+    Create and manage nodes programmatically:
+    ```python
+    # Create a custom node
+    @helper.node(type=NodeType.PROCESSOR)
+    def process_data(input_data):
+        # Your processing logic here
+        return processed_data
+
+    # Schedule node execution
+    helper.schedule_node('process_data', interval='12h')
+    ```
+  </Accordion>
 </AccordionGroup>
 
-## Update your docs
+## Working with Data
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+```python
+# Example workflow with data processing
+from waveassist import WAHelper
+
+# Initialize helper
+helper = WAHelper('your-project-key')
+
+# Configure data processing
+helper.set_option('display.max_columns', None)
+
+# Make API requests
+url = 'https://api.example.com/data'
+headers = {
+    'Accept': 'application/json',
+    'Connection': 'keep-alive'
+}
+
+# Process data
+response = helper.process_data(url, headers)
+```
+
+## Core Features
 
 <CardGroup>
-
-<Card title="Add Content With MDX" icon="file" href="/essentials/markdown">
-  Add content to your docs with MDX syntax.
-</Card>
-
-<Card
-  title="Add Code Blocks"
-  icon="square-code"
-  href="/essentials/code"
->
-  Add code directly to your docs with syntax highlighting.
-</Card>
-
-<Card
-  title="Add Images"
-  icon="image"
-  href="/essentials/images"
->
-  Add images to your docs to make them more engaging.
-</Card>
-
-<Card
-  title="Add Custom Components"
-  icon="puzzle-piece"
-  href="/essentials/reusable-snippets"
->
-  Add templates to your docs to make them more reusable.
-</Card>
-
+  <Card title="Node Management" icon="diagram-project">
+    Create and manage workflow nodes
+  </Card>
+  <Card title="Data Operations" icon="database">
+    Handle data inputs and outputs
+  </Card>
+  <Card title="Scheduling" icon="clock">
+    Automate workflow execution
+  </Card>
+  <Card title="Monitoring" icon="chart-line">
+    Track node performance
+  </Card>
 </CardGroup>
+
+## Best Practices
+
+1. **Version Control**: Keep your node code in version control
+2. **Testing**: Test nodes locally before deploying
+3. **Security**: Never commit project keys to code
+4. **Modularity**: Break complex workflows into smaller nodes
+
+<Note>
+Remember to keep your project key secure and never commit it to version control.
+You can manage your keys in the project settings section of the dashboard.
+</Note>
+
+<Note>
+For more advanced scenarios and API details, check our [API Reference](/api-reference/introduction).
+</Note>
