--- a/introduction.mdx
+++ b/introduction.mdx
@@ -112,7 +112,7 @@ Here are some common node types you can create:
   <Card
     title="Python SDK"
     icon="python"
-    href="/core-concepts/nodes"
+    href="/api-reference/sdk/initialization"
   >
     Learn how to use our Python SDK for automation
   </Card>
