--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Quickstart'
-description: 'Get started with WaveAssist in minutes'
+description: 'Get started with WaveAssist in minutes!'
 ---
 
 ## Build Your First Workflow: Fortune of the Day
