--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -7,7 +7,7 @@ description: 'Get started with WaveAssist in minutes'
 
 Let’s build a simple, fun workflow that shows how WaveAssist works — no setup, no APIs, just Python logic.
 
-**Goal**: Generate a daily fortune and log it.
+**Goal**: Generate a daily fortune and log it to display!
 
 ---
 
